hard-gists/1338222/run.log
=== Docker Run Log for 1338222 ===
Started at: Mi 29. Okt 12:07:41 CET 2025

[2025-10-29 12:07:42] START: Running container for 1338222
[2025-10-29 12:07:42] SUCCESS: Container a4b51ee107ccb00940d5bbb149610a737754758c7792e6051c20dfe68b0d3f8f started for 1338222
=== Container logs for 1338222 ===
  File "/snippet.py", line 68
    print pageRank(G,s=.86)
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1338222 ===
[2025-10-29 12:07:44] INFO: Container a4b51ee107ccb00940d5bbb149610a737754758c7792e6051c20dfe68b0d3f8f has stopped
